# cudaproject

./: .gitignore  CMakeLists.txt  README.md
src/: edgedetector.h  kernels.h  main.cpp  main.cu  utils.h
src/common/: ImageAllocatorsCPU.h
